--- a/crowd/index.html
+++ b/crowd/index.html
@@ -48,7 +48,7 @@
 			<p>A real Rafael Nadal when he plays!</p>
 		</div>
 		<div class="hover-box" id="friends_2-box">
-			<p>Always playing the fools these two there...</p>
+			<p>Always playing the fools...</p>
 		</div>
 		<div class="hover-box" id="reading_sitted-box">
 			<p>This book looks awfully good.</p>
