--- a/crowd/index.html
+++ b/crowd/index.html
@@ -54,7 +54,7 @@
 			<p>This book looks awfully good.</p>
 		</div>
 		<div class="hover-box" id="basketter-box">
-			<p>Nice basket from the midfield!</p>
+			<p>Nice shoot from the midfield!</p>
 		</div>
 		<div class="hover-box" id="jazzman-box">
 			<p>A little air of Louis Armstrong...</p>
@@ -142,7 +142,7 @@
 						<span data-id="Laurent">???</span>
 					</div>
 				</div>
-				<div class="column" style="border: none;">
+				<div class="column">
 					<div>
 						<img id="tennisman_1" src="images/tennisman_1.svg" height="150px">
 						<br><br>
