--- a/crowd/index.html
+++ b/crowd/index.html
@@ -28,151 +28,15 @@
 		<span id="score">0/0</span>
 	</div>
 
-	<div class="boxes">
-		<div class="hover-box" id="ninja-box">
-			<p>He missed the casting of Naruto.</p>
-		</div>
-		<div class="hover-box" id="hiking-box">
-			<p>It prepares for the ascent of Mont Blanc.</p>
-		</div>
-		<div class="hover-box" id="fisherman-box">
-			<p>Fish are scarce these days.</p>
-		</div>
-		<div class="hover-box" id="painter-box">
-			<p>Draw me like one of your french girls...</p>
-		</div>
-		<div class="hover-box" id="student-box">
-			<p>It's easier to listen to the birds than teachers.</p>
-		</div>
-		<div class="hover-box" id="tennisman_0-box">
-			<p>A real Rafael Nadal when he plays!</p>
-		</div>
-		<div class="hover-box" id="friends_2-box">
-			<p>Always playing the fools...</p>
-		</div>
-		<div class="hover-box" id="reading_sitted-box">
-			<p>This book looks awfully good.</p>
-		</div>
-		<div class="hover-box" id="basketter-box">
-			<p>Nice shoot from the midfield!</p>
-		</div>
-		<div class="hover-box" id="jazzman-box">
-			<p>A little air of Louis Armstrong...</p>
-		</div>
-		<div class="hover-box" id="tennisman_1-box">
-			<p>His serves are impressive.</p>
-		</div>
-		<div class="hover-box" id="injuried-box">
-			<p>He slipped on ice...</p>
-		</div>
-		<div class="hover-box" id="loris-box">
-			<p>Always glued to his magazines.</p>
-		</div>
-		<div class="hover-box" id="golfer-box">
-			<p>A sunny Sunday on the green.</p>
-		</div>
-		<div class="hover-box" id="footballer-box">
-			<p>The ball went too high to be caught.</p>
-		</div>
-	</div>
+	<div class="boxes"></div>
 
 	<div class="top-right">
 		<span id="collection">Collection</span>
 		<div class="content">
 			<div class="row">
-				<div class="column">
-					<div>
-						<img id="ninja" src="images/ninja.svg" height="150px">
-						<br><br>
-						<span data-id="Pascal">???</span>
-					</div>
-					<br><br>
-					<div>
-						<img id="hiking" src="images/hiking.svg" height="150px">
-						<br><br>
-						<span data-id="Georges">???</span>
-					</div>
-					<br><br>
-					<div>
-						<img id="fisherman" src="images/fisherman.svg" height="150px">
-						<br><br>
-						<span data-id="David">???</span>
-					</div>
-					<br><br>
-					<div>
-						<img id="painter" src="images/painter.svg" height="150px">
-						<br><br>
-						<span data-id="Louis">???</span>
-					</div>
-					<br><br>
-					<div>
-						<img id="student" src="images/student.svg" height="150px">
-						<br><br>
-						<span data-id="Celestin">???</span>
-					</div>
-				</div>
-				<div class="column">
-					<div>
-						<img id="tennisman_0" src="images/tennisman_0.svg" height="150px">
-						<br><br>
-						<span data-id="Daniel">???</span>
-					</div>
-					<br><br>
-					<div>
-						<img id="friends_2" src="images/friends_2.svg" height="150px">
-						<br><br>
-						<span data-id="Pim&nbsp;&&nbsp;Pam">???</span>
-					</div>
-					<br><br>
-					<div>
-						<img id="reading_sitted" src="images/reading_sitted.svg" height="150px">
-						<br><br>
-						<span data-id="Pierre">???</span>
-					</div>
-					<br><br>
-					<div>
-						<img id="basketter" src="images/basketter.svg" height="150px">
-						<br><br>
-						<span data-id="Jordan">???</span>
-					</div>
-					<br><br>
-					<div>
-						<img id="jazzman" src="images/jazzman.svg" height="150px">
-						<br><br>
-						<span data-id="Laurent">???</span>
-					</div>
-				</div>
-				<div class="column">
-					<div>
-						<img id="tennisman_1" src="images/tennisman_1.svg" height="150px">
-						<br><br>
-						<span data-id="Charlie">???</span>
-					</div>
-					<br><br>
-					<div>
-						<img id="injuried" src="images/injuried.svg" height="150px">
-						<br><br>
-						<span data-id="Gilbert">???</span>
-					</div>
-					<br><br>
-					<div>
-						<img id="loris" src="images/loris.svg" height="150px">
-						<br><br>
-						<span data-id="Loris">???</span>
-					</div>
-					<br><br>
-					<div>
-						<img id="golfer" src="images/golfer.svg" height="150px">
-						<br><br>
-						<span data-id="Stanislas">???</span>
-					</div>
-					<br><br>
-					<div>
-						<img id="footballer" src="images/footballer.svg" height="150px">
-						<br><br>
-						<span data-id="Cédric">???</span>
-					</div>
-				</div>
+				<div class="column" id="c0"></div>
+				<div class="column" id="c1"></div>
+				<div class="column" id="c2"></div>
 			</div>
 		</div>
 	</div>
@@ -194,7 +58,9 @@
 
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/scrollbooster@3.0.2/dist/scrollbooster.min.js"></script>
-	<script type="text/javascript" src="js/main.js"></script> 
+	<script type="text/javascript" src="data.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
+
 
 </body>
 </html>
