--- a/bookshelf/configuration.html
+++ b/bookshelf/configuration.html
@@ -34,7 +34,7 @@
 <blockquote>
 <p>You can use an emoji as favicon by using below snippet as source<br></p>
 </blockquote>
-<pre><code class="language-css">data:image/svg+xml,&lt;svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22&gt;&lt;text y=%22.9em%22 font-size=%2290%22&gt;[emoji]&lt;/text&gt;&lt;/svg&gt;
+<pre><code class="language-css">data:image/svg+xml,&lt;svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22&gt;&lt;text y=%22.9em%22 font-size=%2290%22&gt;📚&lt;/text&gt;&lt;/svg&gt;
 </code></pre>
 <p><br></p>
 <h2>Display</h2>
