--- a/bookshelf/indexing-pages.html
+++ b/bookshelf/indexing-pages.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Bookshelf</title><link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📚</text></svg>"><link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css"><link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.2/styles/github-gist.min.css"><link rel="stylesheet" type="text/css" href="css/style.css"><link rel="stylesheet" type="text/css" href="css/themes/default.css"></head><body><div class="content"><div class="article"><div><h1>Indexing pages</h1>
-<p>You can configure sections organisation and pages indexing by editing <code>config/config.json</code>.</p>
+<p>You can configure sections organisation and pages indexing by editing <code>config/index.json</code>.</p>
 <pre><code class="language-json">{
   &quot;index&quot;:[
     {
